# llm_coach

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  config.py  dev_ui.py  leaderboard_card_coach.md  pyproject.toml
.github/workflows/: ci.yml
engine/: client.py  coach.py  prompter.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useChat.ts  useSession.ts
frontend/src/pages/: CoachPage.tsx  LoginPage.tsx
memory/logic/: manager.py
memory/schemas/: coach_types.py  session_state.py
memory/templates/: main.j2
persistence/: backend.py  in_memory.py
src/life_coach_system/: __init__.py  _logging.py  app.py  config.py  dev_ui.py  exceptions.py
src/life_coach_system/api/: __init__.py  app.py  dependencies.py  schemas.py
src/life_coach_system/auth/: __init__.py  jwt.py  oauth.py  user_repository.py
src/life_coach_system/engine/: README.md  __init__.py  client.py  coach.py  prompter.py
src/life_coach_system/memory/: README.md  __init__.py
src/life_coach_system/persistence/: README.md  __init__.py  backend.py  in_memory.py  sql_backend.py  tables.py
src/life_coach_system/skills/: __init__.py
tests/: conftest.py
tests/e2e/: conftest.py  test_chat.py  test_session_flows.py  test_session_metadata.py  test_session_switching.py
tests/test_api/: conftest.py  test_auth_routes.py  test_chat.py  test_chat_anonymous_limit.py  test_health.py  test_sessions.py
tests/test_auth/: test_jwt.py  test_user_repository.py
tests/test_memory/: test_manager.py
tests/test_persistence/: test_create_storage.py  test_in_memory.py  test_shared_storage.py  test_sql_backend.py
tests/test_utils/: test_evaluator.py  test_leaderboard_parser.py
utils/: evaluator.py  leaderboard_parser.py
(+24 files in other folders)
